# more files to include in dist
EXTRA_DIST =  BuildTypeTargets.cmake CHECK_SIZEOF.cmake CLEAN_CMAKE.cmake CREATE_CVSTAGS_MACRO.cmake cvsnew.sh CVS_Targets.cmake FindPerlLibs.cmake FindSWIG.cmake GET_ARCH.cmake GET_GCC_VERSION.cmake OVERWRITE_COMPILER.cmake REDIRECT_COMPILERS_TO_SYSROOT.cmake RenameInstalledStaticLib.cmake.in REPLACE_DEFAULT_VALUE_MACRO.cmake SET_INSTALL_NAME.cmake.in SET_LOCAL_DEFAULTS.cmake STORE_FILES_LIST.cmake trycompile.c.in update.sh UseSWIG.cmake ADD_EASDIF_FLAGS.cmake



